--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,23 +14,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".MainActivity">
             android:label="Main Activity">
         </activity>
         <activity android:name=".HashmapAcitivity" />
-        <activity android:name=".HandlerActivity" />
-        <activity android:name=".UpdateActivity" />
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login">
-
+        <activity android:name=".EmailPasswordActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HandlerActivity" />
+        <activity android:name=".UpdateActivity" />
     </application>
 
 </manifest>
